<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_15sdp"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_startup"
        android:paddingTop="@dimen/_25sdp"
        tools:context=".Startup">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginTop="@dimen/_65sdp"
            android:textSize="@dimen/_18ssp"
            android:text="@string/please_continue_as" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_owner"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btn_color"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/owner"
            android:background="@drawable/bg_btn_round"
            app:backgroundTint="@color/btn_color"
            android:layout_marginTop="@dimen/_25sdp"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_user"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_btn_round"
            app:backgroundTint="@color/btn_color"
            android:text="@string/user" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_guess"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/bg_btn_round"
            app:backgroundTint="@color/btn_color"
            android:text="@string/guest" />
    </LinearLayout>
</layout>