<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_"
        >



        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/bg_signup"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="@dimen/_20sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:context=".owner.ui.OwnerLogin">




            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/logo" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_20sdp"
                    android:paddingHorizontal="@dimen/_15sdp"
                    >

                    <!--TextInput layout which acts as a wrapper to the edit text-->
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/_15ssp"
                        android:textAllCaps="false"
                        android:fontFamily="@font/poppins_semibold"
                        android:textColor="@color/color1"
                        />


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter email or username"
                        android:background="@color/white"
                        app:hintTextColor="@color/grey"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_10sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:background="@color/white"

                            android:ems="15"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        app:hintTextColor="@color/grey"
                        android:background="@color/white"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:background="@color/white"
                            android:ems="15"/>

                    </com.google.android.material.textfield.TextInputLayout>
                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="end"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="forgot Password?" />



                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/login"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:text="@string/log_in"
                        android:layout_marginTop="@dimen/_50sdp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/bg_btn_round"
                        app:backgroundTint="@color/purple_500"
                        />

                    <TextView
                        android:id="@+id/tv_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/poppins_medium"
                        android:layout_marginTop="@dimen/_30sdp"
                        android:textSize="@dimen/_10ssp"
                        android:text="@string/do_not_have_an_account_please_create_here" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>